# teamstory

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  testharnes.py
.github/workflows/: ci.yml
src/: main.py
tests/: test_main.py
